# ChangeLog for dev-python/fancycompleter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Apr 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.4.ebuild:
  Keyworded amd64.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild,
  fancycompleter-0.4.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild,
  fancycompleter-0.4.ebuild:
  Switched to python-distutils-ng eclass.

  28 Mar 2012; James Rowe <jnrowe@gmail.com> -fancycompleter-0.2.ebuild,
  fancycompleter-0.3.ebuild:
  Keyworded amd64.

  28 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild:
  Keyworded amd64.

*fancycompleter-0.4 (19 Mar 2012)

  19 Mar 2012; James Rowe <jnrowe@gmail.com> +fancycompleter-0.4.ebuild:
  Version bump [572].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild,
  fancycompleter-0.3.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild:
  Removed Python 2.4 support.

*fancycompleter-0.3 (27 Feb 2012)

  27 Feb 2012; James Rowe <jnrowe@gmail.com> +fancycompleter-0.3.ebuild:
  Version bump [557].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded x86.

  03 Apr 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded amd64.

  03 Mar 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded ~x86.

*fancycompleter-0.2 (02 Mar 2011)

  02 Mar 2011; James Rowe <jnrowe@gmail.com> +fancycompleter-0.2.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me. Required by pdbpp.
