@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST fancycompleter-0.3.tar.gz 8414 RMD160 a1e8fe1e766a22eb92e29522d1b0d1173755a7e0 SHA1 dd98ff55de6db055f2155a1dbf9797033cce09a7 SHA256 de0a0b1866672a9aa7b6825610a92475fd8531f20579bdcf015c38d31ebb2479
 DIST fancycompleter-0.4.tar.gz 8435 RMD160 f8f92df73269877a84e79cb31b1db678bce23f42 SHA1 961fd2f5b647b214dc64a685de144d700edaf8e7 SHA256 13e25da511c011cb48c8c59fd408774f0329b36d01ba7da8add486ae05b278d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9y81IACgkQzJrj3cAXR0kq2wCfcfr+vUbArcMhSx09QQvhEMMF
-2QcAoI8j/Kvs8gZxa9/zXREcGVewElVd
-=rdOo
+iEYEAREKAAYFAk+OqNMACgkQzJrj3cAXR0lG/QCgkWrC2w9lgPtLGeVQ/CXZc6Vw
+I60An2IvqQKCI2wYZ2wh9oE2c/nx1e1s
+=pRNb
 -----END PGP SIGNATURE-----
