@@ -13,7 +13,7 @@ DESCRIPTION="Colourful TAB completion for Python prompt"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
