@@ -4,11 +4,11 @@ DESCRIPTION=Colourful TAB completion for Python prompt
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/fancycompleter/
 IUSE=python_targets_python2_7 python_targets_python3_1 python_targets_python3_2
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=BSD
 RDEPEND=dev-python/pyrepl python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_1? ( dev-lang/python:3.1 ) python_targets_python3_2? ( dev-lang/python:3.2 )
 REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_1 python_targets_python3_2 )
 SLOT=0
 SRC_URI=mirror://pypi/f/fancycompleter/fancycompleter-0.4.tar.gz
 _eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	4e234f0a75d16eabe69191b391892d7b	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=3ce4129ea867f899d24e7835e21008ab
+_md5_=d889c1db5635276bb940e3b542071a0b
